--- a/perceptron.ipynb
+++ b/perceptron.ipynb
@@ -104,7 +104,7 @@
     "    # create 3D grid of points\n",
     "    points = np.linspace(-1, 1, dims)\n",
     "    X, Y, Z = np.meshgrid(points, points, points)\n",
-    "    \n",
+    "\n",
     "    # features are the x, y, z coordinates\n",
     "    features = np.column_stack((X.ravel(), Y.ravel(), Z.ravel()))\n",
     "\n",
@@ -113,14 +113,16 @@
     "    labels = np.where(distances >= 0, 1, -1)\n",
     "    return X, Y, Z, features, labels\n",
     "\n",
+    "\n",
     "def generate_hyperplane(scaling, normal_vector):\n",
     "    # create 2D points\n",
     "    points = np.linspace(-1, 1, scaling)\n",
     "    xx, yy = np.meshgrid(points, points)\n",
-    "    \n",
+    "\n",
     "    # the z value is the defined by the hyperplane\n",
     "    zz = -(normal_vector[0] * xx + normal_vector[1] * yy) / normal_vector[2]\n",
     "    return xx, yy, zz\n",
+    "\n",
     "\n",
     "# normalized normal vector\n",
     "target_normal_vector = np.array([1.0, 1.0, 1.0])\n",
@@ -133,19 +135,29 @@
     "\n",
     "# visualize the hyperplane\n",
     "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111, projection='3d')\n",
+    "ax = fig.add_subplot(111, projection=\"3d\")\n",
     "\n",
     "# plot the hyperplane defined by the normal vector\n",
-    "ax.plot_surface(xx, yy, zz, alpha=0.2, color='gray')\n",
-    "ax.quiver(0, 0, 0, target_normal_vector[0], target_normal_vector[1], target_normal_vector[2], color='green', length=1, arrow_length_ratio=0.2)\n",
+    "ax.plot_surface(xx, yy, zz, alpha=0.2, color=\"gray\")\n",
+    "ax.quiver(\n",
+    "    0,\n",
+    "    0,\n",
+    "    0,\n",
+    "    target_normal_vector[0],\n",
+    "    target_normal_vector[1],\n",
+    "    target_normal_vector[2],\n",
+    "    color=\"green\",\n",
+    "    length=1,\n",
+    "    arrow_length_ratio=0.2,\n",
+    ")\n",
     "\n",
     "# plot the points\n",
     "# ax.scatter(features[:,0], features[:,1], features[:,2], marker='o', alpha=0.1)\n",
     "\n",
-    "ax.set_xlabel('X')\n",
-    "ax.set_ylabel('Y')\n",
-    "ax.set_zlabel('Z')\n",
-    "ax.set_title('Hyperplane')"
+    "ax.set_xlabel(\"X\")\n",
+    "ax.set_ylabel(\"Y\")\n",
+    "ax.set_zlabel(\"Z\")\n",
+    "ax.set_title(\"Hyperplane\")"
    ]
   },
   {
@@ -174,7 +186,7 @@
    "outputs": [],
    "source": [
     "def hinge_loss(w, x, b, y):\n",
-    "    return max(0.0, -y*(np.dot(w, x)+b))"
+    "    return max(0.0, -y * (np.dot(w, x) + b))"
    ]
   },
   {
@@ -203,7 +215,7 @@
    "outputs": [],
    "source": [
     "def hinge_loss_db(w, x, b, y):\n",
-    "    if(y*(np.dot(w, x)+b) <= 0.0):\n",
+    "    if y * (np.dot(w, x) + b) <= 0.0:\n",
     "        return -y\n",
     "    return 0"
    ]
@@ -214,6 +226,7 @@
    "metadata": {},
    "source": [
     "Loss function with respect to $\\vec{w}$\n",
+    "\n",
     "$\n",
     "\\nabla_{W} [L(\\vec{w}, b)] = \\begin{cases}\n",
     "0 & -y(\\vec{w} \\cdot \\vec{x} + b) > 1 \\\\\n",
@@ -230,7 +243,7 @@
    "outputs": [],
    "source": [
     "def hinge_loss_dw(w, x, b, y):\n",
-    "    if(y*(np.dot(w, x)+b) <= 0.0):\n",
+    "    if y * (np.dot(w, x) + b) <= 0.0:\n",
     "        return -y * x\n",
     "    return np.zeros_like(x)"
    ]
@@ -287,12 +300,38 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "459b6632-3183-4532-a6fc-169ad0dd2e7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gradient_descent(weights, x, bias, y, learning_rate):\n",
+    "    weights = weights - learning_rate * hinge_loss_dw(weights, x, bias, y)\n",
+    "    bias = bias - learning_rate * hinge_loss_db(weights, x, bias, y)\n",
+    "\n",
+    "    return weights, bias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "9083d389-47ca-47b3-8b16-c7f0e1590bbd",
    "metadata": {},
    "outputs": [],
    "source": [
     "def fit(\n",
-    "    weights, bias, target_normal_vector, features, labels, X, Y, Z, scaling, epochs, learning_rate, output_filename\n",
+    "    weights,\n",
+    "    bias,\n",
+    "    target_normal_vector,\n",
+    "    features,\n",
+    "    labels,\n",
+    "    X,\n",
+    "    Y,\n",
+    "    Z,\n",
+    "    scaling,\n",
+    "    epochs,\n",
+    "    learning_rate,\n",
+    "    optimizer,\n",
+    "    output_filename,\n",
     "):\n",
     "    err_idx = np.arange(1, epochs + 1)\n",
     "    errors = np.full(epochs, -1)\n",
@@ -304,7 +343,7 @@
     "\n",
     "        for x, y in zip(features, labels):\n",
     "            # Forward Propagation\n",
-    "            output = np.dot(weights, x)+bias\n",
+    "            output = np.dot(weights, x) + bias\n",
     "\n",
     "            predictions = np.append(predictions, output)\n",
     "\n",
@@ -312,8 +351,7 @@
     "            error += hinge_loss(weights, x, bias, y)\n",
     "\n",
     "            # Gradient Descent\n",
-    "            weights = weights - learning_rate * hinge_loss_dw(weights, x, bias, y)\n",
-    "            bias = bias - learning_rate * hinge_loss_db(weights, x, bias, y)\n",
+    "            weights, bias = optimizer(weights, x, bias, y, learning_rate)\n",
     "\n",
     "        error /= len(X)\n",
     "        weights = weights / np.linalg.norm(weights)\n",
@@ -339,23 +377,60 @@
     "            )\n",
     "\n",
     "            # Ground truth\n",
-    "            xx_target, yy_target, zz_target = generate_hyperplane(scaling, target_normal_vector)\n",
-    "            ground_truth_legend = ax1.plot_surface(\n",
-    "                xx_target, yy_target, zz_target, color=\"red\", alpha=0.2, label=\"Ground Truth\"\n",
+    "            xx_target, yy_target, zz_target = generate_hyperplane(\n",
+    "                scaling, target_normal_vector\n",
     "            )\n",
-    "            ax1.quiver(0, 0, 0, target_normal_vector[0], target_normal_vector[1], target_normal_vector[2], color='red', length=1, arrow_length_ratio=0.1)\n",
-    "            \n",
+    "            ground_truth_legend = ax1.plot_surface(\n",
+    "                xx_target,\n",
+    "                yy_target,\n",
+    "                zz_target,\n",
+    "                color=\"red\",\n",
+    "                alpha=0.2,\n",
+    "                label=\"Ground Truth\",\n",
+    "            )\n",
+    "            ax1.quiver(\n",
+    "                0,\n",
+    "                0,\n",
+    "                0,\n",
+    "                target_normal_vector[0],\n",
+    "                target_normal_vector[1],\n",
+    "                target_normal_vector[2],\n",
+    "                color=\"red\",\n",
+    "                length=1,\n",
+    "                arrow_length_ratio=0.1,\n",
+    "            )\n",
+    "\n",
     "            # Perceptron Predictions\n",
-    "            colors = colors = ['green' if d >= 0 else 'orange' for d in predictions]\n",
-    "            ax1.scatter(features[:,0], features[:,1], features[:,2], c=colors, marker='o', alpha=0.2)\n",
-    "            \n",
+    "            colors = colors = [\"green\" if d >= 0 else \"orange\" for d in predictions]\n",
+    "            ax1.scatter(\n",
+    "                features[:, 0],\n",
+    "                features[:, 1],\n",
+    "                features[:, 2],\n",
+    "                c=colors,\n",
+    "                marker=\"o\",\n",
+    "                alpha=0.2,\n",
+    "            )\n",
+    "\n",
     "            xx, yy, zz = generate_hyperplane(scaling, weights)\n",
     "            predictions_legend = ax1.plot_surface(\n",
-    "                xx, yy, zz, color=\"blue\",\n",
+    "                xx,\n",
+    "                yy,\n",
+    "                zz,\n",
+    "                color=\"blue\",\n",
     "                alpha=0.2,\n",
     "                label=\"Prediction\",\n",
     "            )\n",
-    "            ax1.quiver(0, 0, 0, weights[0], weights[1], weights[2], color='blue', length=1, arrow_length_ratio=0.1)\n",
+    "            ax1.quiver(\n",
+    "                0,\n",
+    "                0,\n",
+    "                0,\n",
+    "                weights[0],\n",
+    "                weights[1],\n",
+    "                weights[2],\n",
+    "                color=\"blue\",\n",
+    "                length=1,\n",
+    "                arrow_length_ratio=0.1,\n",
+    "            )\n",
     "\n",
     "            # Legend\n",
     "            ax1.legend(\n",
@@ -373,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "85b028ee-d2c3-4bf7-909f-e0dcc2eb16f9",
    "metadata": {},
    "outputs": [],
@@ -386,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "9933e8e8-1e39-47bc-a6c1-6d6ef9995f87",
    "metadata": {},
    "outputs": [
@@ -434,7 +509,21 @@
     "learning_rate = 0.0005\n",
     "\n",
     "output_filename = \"perceptron.gif\"\n",
-    "fit(weights, bias, target_normal_vector, features, labels, X, Y, Z, scaling, epochs, learning_rate, output_filename)"
+    "fit(\n",
+    "    weights,\n",
+    "    bias,\n",
+    "    target_normal_vector,\n",
+    "    features,\n",
+    "    labels,\n",
+    "    X,\n",
+    "    Y,\n",
+    "    Z,\n",
+    "    scaling,\n",
+    "    epochs,\n",
+    "    learning_rate,\n",
+    "    gradient_descent,\n",
+    "    output_filename,\n",
+    ")"
    ]
   },
   {
@@ -447,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "026dfc39-58b4-49e8-92ca-99c798ab1866",
    "metadata": {},
    "outputs": [
@@ -458,7 +547,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
